# Tree-Point-Cloud-Classification

./: .gitignore  .gitmodules  LICENSE  README.md  main.py  output.csv  pyproject.toml  requirements.txt  requirements_pytorch.txt
data/: species.txt  tree_metadata_dev.csv
src/: BDL_api.py  TreeClassifier.py  array_processing.py  main.py
src/config_files/: config_train.json  config_train_single.json
src/data_processing/: AnalyzeData.py  FindDataShift.py  InjectLeakage.py  RebalanceDominant.py  downsample_LAZ.py  downsample_npy.py  downsample_trees.py  downsample_trees10KPL.py  inspect_dataset.py  plot_cloud_npy.py  remove_low_trees.py  swap_labels.py  testSkeleton.py
src/model_configs/: config_model_0.json  config_model_4.json  config_model_6.json  config_model_8.json  config_model_single.json
src/model_pipeline/: CONV.py  EvalSegm_RandLANet.py  Eval_TreeClassification.py  TrainSegmAutomated.py  Train_Automated.py  Train_SegmAutomated.py  _data_loader.py  _train_single_case.py  model.py  model_dino.py  model_en.py  model_test.py
src/model_pipeline/config_files/: config_train.json  config_train_single.json
src/model_pipeline/model_configs/: config_model_0.json  config_model_1.json  config_model_2.json  config_model_3.json  config_model_4.json  config_model_5.json  config_model_6.json  config_model_7.json  config_model_9.json  config_model_b1.json  config_model_b3.json  config_model_b4.json  config_model_single.json
src/model_pipeline/model_configs_bin/: config_model_4.json
src/utils/: __init__.py  data_augmentation.py  pcd_manipulation.py
(+3 files in other folders)
