[project]
name = "tree-point-cloud-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpsample>=1.0.2",
    "matplotlib>=3.10.8",
    "optuna>=4.8.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.26.0",
]
